--- a/202235097_이준혁_lab3.md
+++ b/202235097_이준혁_lab3.md
@@ -1,5 +1,4 @@
 # My Project Plan (Level 1 Heading)
-
 **_Note:_** This document is written merely as an illustrative example, and does not provide
 any working guide to an actual project.
 
@@ -12,16 +11,14 @@ or PyTorch, and other open source softwares.
 For example, the objects in the following images were detected using mmdetection:
 ![](https://user-images.githubusercontent.com/12907710/137271636-56ba1cd2-b110-4812-8221-b4c120320aa9.png)
 ## Dependencies (Level 3 Heading)
+-
+-python
+-opencv-python
+-tensorflow
+-openmmlab
+-package manager
 
-```
-python
-opencv-python
-tensorflow
-openmmlab
-package manager
-```
 ## Installation
-
 In a bash terminal, run the following commands ( _Do NOT actually run these commands in
 your computer_ ):
 
